--- a/index.html
+++ b/index.html
@@ -13,14 +13,37 @@
         <link rel="stylesheet" href="https://use.typekit.net/awa7exg.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body>
-<div class="container m_t_2"> 
+
+<body class="backgroundColor">
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+        <a href="index.html" class="navbar-brand">EPDS</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navLinks">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="learn.html" class="nav-link">LEARN</a>
+                </li>
+                <li class="nav-item">
+                    <a href="resources.html" class="nav-link">RESOURCES</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<div class="container m_t_5"> 
     <h1 class="welcomeToThe">WELCOME TO THE</h1>
     <h1 class="EPDS">EPDS</h1>
     <p class="instruction"> Please select the answer that comes closest to how you have felt <b>in the past seven days</b> not just how you feel today.<br> The first question is a practice question that will not be scored.<br>Once you select your response, the next question will automatically appear.</p>
 </div>
 
    <div class="d-flex justify-content-center"><a href="quizstart.html"><button class="startButton">Start EPDS</button></a>
+</div>
+<div class="container m_t_2">
+    <p class="copyright">Cox, J.L., Holden, J.M., and Sagovsky, R. 1987. Detection of postnatal depression: Development of the 10-item
+        Edinburgh Postnatal Depression Scale. British Journal of Psychiatry 150:782-786 .<br>
+  K. L. Wisner, B. L. Parry, C. M. Piontek, Postpartum Depression N Engl J Med vol. 347, No 3, July 18, 2002,
+        194-199</p>
 </div>
    
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
