--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body class="backgroundColor">
+<body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
         <a href="index.html" class="navbar-brand">EPDS</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
@@ -25,19 +25,18 @@
                 <li class="nav-item">
                     <a href="learn.html" class="nav-link">LEARN</a>
                 </li>
-                <li class="nav-item">
-                    <a href="resources.html" class="nav-link">RESOURCES</a>
-                </li>
             </ul>
         </div>
     </nav>
 <div class="container m_t_5"> 
     <h1 class="welcomeToThe">WELCOME TO THE</h1>
     <h1 class="EPDS">EPDS</h1>
-    <p class="instruction"> Please select the answer that comes closest to how you have felt <b>in the past seven days</b> not just how you feel today.<br> The first question is a practice question that will not be scored.<br>Once you select your response, the next question will automatically appear.</p>
+    <div class="instructions">
+    <p class="instruction"> Please select the answer that comes closest to how you have felt <span style="color:#fdca40"><b>in the past seven days</b></span> not just how you feel today. Once you select your response, the next question will automatically appear.<br><br><span style="color:#fdca40">NOTE:</span> The first question is a practice question that will not be scored.<br><br></p>
+</div>
 </div>
 
-   <div class="d-flex justify-content-center"><a href="quizstart.html"><button class="startButton">Start EPDS</button></a>
+   <div class="d-flex justify-content-center"><a href="quizstart.html"><button class="startButton">BEGIN</button></a>
 </div>
 <div class="container m_t_2">
     <p class="copyright">Cox, J.L., Holden, J.M., and Sagovsky, R. 1987. Detection of postnatal depression: Development of the 10-item
