--- a/quizstart.html
+++ b/quizstart.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://use.typekit.net/awa7exg.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body class="backgroundImage">
+<body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
         <a href="index.html" class="navbar-brand">EPDS</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
@@ -24,20 +24,18 @@
                 <li class="nav-item">
                     <a href="learn.html" class="nav-link">LEARN</a>
                 </li>
-                <li class="nav-item">
-                    <a href="resources.html" class="nav-link">RESOURCES</a>
-                </li>
             </ul>
         </div>
     </nav>
 <div class="container m_t_2"> 
     <div class="quiz">
-      <div class="p_1"><progress max="10" value="0"></progress></div>
-      <div class="progressData"><span class="current">0</span> / <span class="limit">0</span></div>
+    
       <div class="question card">
         <p class="questionText"></p>
         <div class="options"></div> <!-- END .options -->
       </div> <!-- END .question -->
+      <div class="p_1"><progress max="10" value="0"></progress></div>
+      <div class="progressData"><span class="current">0</span> / <span class="limit">0</span></div>
     </div> <!-- END .quiz -->
   </div> <!-- END .container -->
 
