--- a/learn.html
+++ b/learn.html
@@ -73,7 +73,7 @@
                                         <div class="card-header" id="faqHeading-3">
                                             <div class="mb-0">
                                                 <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-3" data-aria-expanded="false" data-aria-controls="faqCollapse-3">
-                                                    <span class="badge">3</span>Why do we not currently screen more maternal mental health during pregnancy?
+                                                    <span class="badge">3</span>Why do we not currently screen for maternal mental health during pregnancy?
                                                 </h5>
                                             </div>
                                         </div>
